# ExchangeComponents

./: CMakeLists.txt  README.md  main.cpp
Src/MatchingEngine/: Errors.h  Limit.cpp  Limit.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  OrderSide.h  OrderTimeInForce.h  OrderTree.cpp  OrderTree.h  OrderType.h  Trade.h  utils.h
Src/MessageQueue/: Message.cpp  Message.h  Queue.cpp  Queue.h
Src/WorkInProgress/: Action.h  InboundMessage.h  OrderMatchingEngine.cpp  OrderMatchingEngine.h  OutboundMessage.h
